added this month's ICRA details

--- a/demo/_posts/2025-05/2025-05-20-ICRA.md
+++ b/demo/_posts/2025-05/2025-05-20-ICRA.md
@@ -1,5 +1,12 @@
+---
+layout: log
+---
+
 ## ICRA2025 Day 1
-- 
+- Met Nathan from OSU
+- Met Brian from OSU who works in Control and Optimization
+- Kleo, who is doing a postdoc at Maryland and knows Xiaomin
+- Met Xiaomin in person!
 
 ## ICRA2025 Day 2
 
@@ -15,9 +22,9 @@
 ### People to look into:
 - Matthew Kelly - works explaining trajectory optimization clearly
 
-
 ### TO DO:
 - AI resume review
+- Make resume QR code to share
 - Send resume to Luis from Qualysis
 
 ### At Exhibition:
